--- a/USBCopyC/App.config
+++ b/USBCopyC/App.config
@@ -1,6 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key ="autoRefresh" value="1"></add>
+    <add key="autoRefresh" value="1">
+    </add>
   </appSettings>
 </configuration>
