Implemented ListView instead of Listbox minor other changes

--- a/USBCopyC/USBCopyC.csproj
+++ b/USBCopyC/USBCopyC.csproj
@@ -45,6 +45,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>usb_icon_Olz_icon.ico</ApplicationIcon>
