--- a/USBCopyC/USBCopyC.csproj
+++ b/USBCopyC/USBCopyC.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{40190995-66D0-4582-943D-0104B3C3334F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
+    <RootNamespace>USBBatchCopy</RootNamespace>
     <AssemblyName>USB Batch Copy</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
